--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,8 @@ html
       script src="//code.jquery.com/jquery-1.11.3.min.js"
       
   body
+    = render "shared/nav"
+
     = render "shared/notice"
     p.alert = alert
       
