--- a/app/views/articles/_article.html.slim
+++ b/app/views/articles/_article.html.slim
@@ -1,4 +1,4 @@
-.article data-controller="article" data-article-body-is-visible-value="false" data-action="click->article#click contextmenu->article#rightClick" data-article-is-read-value="#{@read_articles.include?(article)}" data-article-id-value="#{article.id}"
+.article data-controller="article" data-article-body-is-visible-value="false" data-action="click->article#click" data-article-is-read-value="#{@read_articles.include?(article)}" data-article-id-value="#{article.id}"
   div.article_title data-article-target="title" 
     = article.title
     p.is-size-7 
