--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,7 @@ html
   body
     = render "shared/nav"
 
+    = turbo_stream_from "notice"
     = render "shared/notice"
     p.alert = alert
       
