--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -3,7 +3,15 @@
     
     br
     br
-    = button_to "Update!", retrieve_updates_articles_path
+    = button_to "Update!", retrieve_updates_articles_path, class: "button is-small is-info"
+
+    p.title.is-6.mt-5 = "Search"
+      
+    = form_with url: search_articles_path, method: :get do |f|
+      = f.text_field "search[query]", class: "input is-small"
+      = f.submit "Search", class: "button is-small mt-2 is-success"
+        
+    br
 
     p.title.is-6.mt-5 = "Sources"
     .sources
